--- a/midterm_8/task1.ipynb
+++ b/midterm_8/task1.ipynb
@@ -6,7 +6,7 @@
         "id": "yoWrmvPO2f9S"
       },
       "source": [
-        "**Group 8 - Midterm Assignment - Mining Massive Data SetS**\n",
+        "**Group 8 - Midterm Assignment - Mining Massive Data Sets**\n",
         "\n",
         "---\n",
         "\n",
@@ -400,7 +400,7 @@
         "\n",
         "  plt.xticks(rotation=90)\n",
         "  plt.tight_layout()\n",
-        "  plt.show()\n"
+        "  plt.show()"
       ]
     },
     {
